--- a/src/Xamarin.Stripe.Terminal.Forms.iOS/Xamarin.Stripe.Terminal.Forms.iOS.csproj
+++ b/src/Xamarin.Stripe.Terminal.Forms.iOS/Xamarin.Stripe.Terminal.Forms.iOS.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
-    <Reference Include="NativeLibrary">
-      <HintPath>..\packages\Xamarin.Stripe.Terminal.iOS.1.1.1\lib\xamarinios10\NativeLibrary.dll</HintPath>
+    <Reference Include="Xamarin.Stripe.Terminal.iOS">
+      <HintPath>..\packages\Xamarin.Stripe.Terminal.iOS.1.2.0\lib\xamarinios10\Xamarin.Stripe.Terminal.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
