--- a/src/Xamarin.Stripe.Terminal.Forms.Android/Xamarin.Stripe.Terminal.Forms.Android.csproj
+++ b/src/Xamarin.Stripe.Terminal.Forms.Android/Xamarin.Stripe.Terminal.Forms.Android.csproj
@@ -285,6 +285,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Callbacks.cs" />
     <Compile Include="TerminalService.cs" />
+    <Compile Include="StripeConnectionTokenProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
