--- a/src/Xamarin.Stripe.Terminal.Forms.iOS/Xamarin.Stripe.Terminal.Forms.iOS.csproj
+++ b/src/Xamarin.Stripe.Terminal.Forms.iOS/Xamarin.Stripe.Terminal.Forms.iOS.csproj
@@ -49,13 +49,15 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerminalService.cs" />
+    <Compile Include="StripeConnectionTokenProvider.cs" />
+    <Compile Include="Callbacks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Xamarin.Stripe.Terminal.Forms.Core\Xamarin.Stripe.Terminal.Forms.Core.csproj">
-      <Project>{FAFE2D25-95CD-4F2E-9C98-7245E101FCB6}</Project>
+      <Project>{C9C9B09A-5E84-442D-A1D5-A7815CBA2F18}</Project>
       <Name>Xamarin.Stripe.Terminal.Forms.Core</Name>
     </ProjectReference>
   </ItemGroup>
