Updates for version 1.4.0

--- a/src/Xamarin.Stripe.Terminal.Forms.iOS/Xamarin.Stripe.Terminal.Forms.iOS.csproj
+++ b/src/Xamarin.Stripe.Terminal.Forms.iOS/Xamarin.Stripe.Terminal.Forms.iOS.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
     <Reference Include="Xamarin.Stripe.Terminal.iOS">
-      <HintPath>..\packages\Xamarin.Stripe.Terminal.iOS.1.2.0\lib\xamarinios10\Xamarin.Stripe.Terminal.iOS.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Stripe.Terminal.iOS.1.4.0\lib\Xamarin.iOS10\Xamarin.Stripe.Terminal.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
