--- a/src/Xamarin.Stripe.Terminal.Forms.Android/packages.config
+++ b/src/Xamarin.Stripe.Terminal.Forms.Android/packages.config
@@ -37,6 +37,7 @@
   <package id="Xamarin.AndroidX.Annotation" version="1.1.0.1" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.AppCompat" version="1.1.0.1" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.AppCompat.AppCompatResources" version="1.1.0.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.AppCompat.Resources" version="1.1.0" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Arch.Core.Common" version="2.1.0.1" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Arch.Core.Runtime" version="2.1.0" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.AsyncLayoutInflater" version="1.0.0.1" targetFramework="monoandroid90" />
@@ -80,6 +81,7 @@
   <package id="Xamarin.AndroidX.ViewPager" version="1.0.0.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Google.Android.Material" version="1.0.0.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Google.Dagger" version="2.25.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Google.Guava.ListenableFuture" version="1.0.0.2" targetFramework="monoandroid90" />
   <package id="Xamarin.JavaX.Inject" version="1.0.0" targetFramework="monoandroid90" />
-  <package id="Xamarin.Stripe.Terminal.Android" version="1.0.17.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Stripe.Terminal.Android" version="1.0.17.2" targetFramework="monoandroid11.0" />
 </packages>
